--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>roboguice</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+        <dependency>
+            <groupId>com.pivotallabs</groupId>
+            <artifactId>robolectric</artifactId>
+            <version>1.0-RC1</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
